# CodeAlign

./: .env.example  .gitignore  LICENSE  README.md  check_models.py  pyproject.toml  reproduce_llm_failure.py  requirements.txt  run_app.bat  test_gemini.py  test_groq_connection.py  test_import.py  test_output.txt  test_scenarios.py
.streamlit/: config.toml
examples/: code_lis_missing_edge.py  code_lis_non_decreasing.py  code_lis_strict.py  code_lis_strong.py  code_substring_on2.py  lis_decreasing.py  lis_duplicate.py  lis_empty.py  problem_lis.md  problem_substring.md  sample_submissions.json  two_sum.py
src/codealign/: __init__.py  api.py  cohort_stats.py  ui_app.py
src/codealign/alignment/: __init__.py  align_reasoner.py  behaviour_extract.py  code_analysis.py  confidence.py  models.py
src/codealign/authenticity/: __init__.py  ai_signals.py  features.py  ingest.py  models.py  similarity.py
src/spec_guard/: __init__.py
src/spec_guard/origin_analysis/: __init__.py
tests/: test_ai_signals.py  test_align_reasoner.py  test_auth_similarity.py  test_behaviour_extract.py  test_confidence.py  test_core_flow.py  test_end_to_end.py
